--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@
     margin-bottom: 10px;
 }
 
-#imgWrap{
+#iconWrap{
     display: flex;
     justify-content: center;
 }
@@ -31,4 +31,16 @@
     margin-left: 5px;
     margin-right: 5px;
     
+}
+
+#intWrap{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+#intTitle{
+    font-size: 25px;
+    font-weight: bold;
 }
